--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="card-body">
       <h5 class="card-title">Discurso de bodas</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary" style="padding-bottom:3%;">Parque frontera (UOYEP)</h6>
-      <p class="card-text">Los invitamos a escuchar nuestro discurso de bodas el dia Sábado 30 de Septiembre de 2023 apartir de las 20hs</p>
+      <p class="card-text">Los invitamos a escuchar nuestro discurso de bodas el día Sábado 30 de Septiembre de 2023 apartir de las 20hs</p>
       <a 
       href="https://www.google.com/maps/@-34.7639753,-58.4785994,3a,75y,249.4h,90t/data=!3m6!1e1!3m4!1sY8UXCjnZQ6E9Jgs6_duEwg!2e0!7i16384!8i8192?entry=ttu" target="_blank" 
       class="direccion discurso de bodas" style="border: solid; padding: 1%; margin-top: 150%;background-color:  rgb(226, 223, 206); color: black;"
@@ -117,7 +117,7 @@
     <div class="card-body">
       <h5 class="card-title">Salon de fiesta</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary" style="padding-bottom:3%;">Parque frontera (UOYEP)</h6>
-      <p class="card-text">Los esperamos luego para la celebración de bodas el dia Sábado 30 de Septiembre de 2023 apartir de las 21hs</p>
+      <p class="card-text">Los esperamos luego para la celebración de bodas el día Sábado 30 de Septiembre de 2023 apartir de las 21hs</p>
       <a style="border: solid; padding: 1%; background-color:  rgb(226, 223, 206); color: black;" 
       href="https://www.google.com/maps/@-34.7639753,-58.4785994,3a,75y,249.4h,90t/data=!3m6!1e1!3m4!1sY8UXCjnZQ6E9Jgs6_duEwg!2e0!7i16384!8i8192?entry=ttu" target="_blank"
       class="direccion salon de fiesta">Ubicación</a>
