--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   
   <!--confimacion-->
   <h3>
-<a id="confirmacion" href="https://docs.google.com/forms/d/154naq2YziYb07aNlqCp0xqN9y5p5Dvgq1yDhUJMuZr4/prefill" target="_blank"> 
+<a id="confirmacion" href="https://forms.gle/P2X1WLAeCt5kfBPq8" target="_blank"> 
   Confirme su asistencia en el siguiente link</a>
  </h3>
   <!--discurso-->
